:rocket: Listo para ejecutar en servidor

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ keras-cv @ git+https://github.com/keras-team/keras-cv@94b0a551d03ee9de3d81663e2c
 tensorflow==2.20.0
 matplotlib==3.10.8
 opencv-python==4.13.0.92
+pycocotools==2.0.11
