--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "matplotlib==3.10.8",
     "opencv-python==4.13.0.92",
     "tensorflow==2.20.0",
+    "pycocotools==2.0.11",
+    "setuptools==80.9.0",
 ]
 
 [tool.uv.sources]
